fixing feat, implement unit test, implement docker-compose
