# app/Http/Requests/SalesRequest.php
@@ -1,0 +1,37 @@
+<?php
+
+namespace App\Http\Requests;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class SalesRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     *
+     * @return bool
+     */
+    public function authorize()
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array
+     */
+    public function rules()
+    {
+        return [
+            'vehicle_id' => [
+                'required',
+                'exists:App\Models\Vehicle,_id'
+            ],
+            'quantity' => [
+                'required',
+                'integer'
+            ]
+        ];
+    }
+}
